--- a/src/posts/TGF-data-dive.mdx
+++ b/src/posts/TGF-data-dive.mdx
@@ -58,7 +58,7 @@ I won't share names in this post but I can tell you we've had **4 individuals wh
 
 Attendance has only dipped below the 200 participants mark for one event. This happened to be New Year's day so I think we can safely say this is likely caused by a combination of people recovering from the night before or heading out to the [Broadstone quarter marathon](https://poolerunners.co.uk/broadstone-quarter/) which is a popular place to start the new year if you're a runner in Dorset.
 
-Rather than list out the number of athletes by athletic age categories here I thought I'd turn to the dark side (marketing 😈) and roughly show how our attendees break down by [generational groups](https://www.mentalfloss.com/article/609811/age-ranges-millennials-and-generation-z). Doing this also helps compensate for an interesting quirk in the stats. When I totalled up the number athletes against the athletic age/gender categories used by parkrun - I was out by a total of 32! I scratched my head for a while before noticing that 32 attendees in the last 20 events have had a birthday which means they've been listed in more than one age category. Many happy returns birthday people!! 🎂
+Rather than simply list out the number of athletes by parkrun age categories I thought I'd turn to the dark side (marketing 😈) and roughly show how our attendees break down by [generational groups](https://www.mentalfloss.com/article/609811/age-ranges-millennials-and-generation-z). Doing this also helps compensate for an interesting quirk in the stats. When I totalled up the number of athletes against the athletic age/gender categories used by parkrun - I was out by a total of 32! I scratched my head for a while before noticing that 32 attendees in the last 20 events have had a birthday which means they've been listed in more than one age category. Many happy returns birthday people!! 🎂
 
 <Doughnutchart chartClass="imageRight" />
 
@@ -82,7 +82,7 @@ For a future experiemnt i'd be keen to compare this picture to that at other eve
 
 I found looking through our event data an interesting little weekend diverson. It certainly got me learning a few new tricks (which is mostly why I tinker like this). I'm present at most of our events and that experience is way better than trawling through the numbers but equally I'm usually focussed on a specific task whilst there. This made me step back and look at things from a different perspective. Some of these stats like the times of fastest finishers aren't things I would normally pay much attention to on the day but it was fascinating to look at these along with stats like the spread of times for individual athletes over multiple events. Getting a better understanding of the split between first-timers and repeat visitors certainly challenged my assumptions around our attendance.
 
-I'm defintely going to continue to try and get some meaningful data around our voluteers. Volunteering is such an important part of the event for me both me as an inidividual but also it's also imperative for the success and sustainability of our event so I feel it's important we understand more about how our volunteers add value and participate right now. Much of this we already do through other methods (like talking to each other) but I'd still like to play around with the data.
+I'm defintely going to continue to try and get some meaningful data around our voluteers. Volunteering is such an important part of the event for me both me as an inidividual but it's also imperative for the success and sustainability of our event . I feel it's important we understand more about how our volunteers add value and if there are any patterns we can learn from. Much of this we already do through other methods (like talking to each other) but I'd still like to play around with the data.
 
 I'm also keen experiment looking at events elsewhere - both in terms of understanding how succesful events grow over time but also just in terms of similarities and differences. Maybe I could start looking for our parkrun event twin?!!
 
