--- a/src/posts/TGF-data-dive.mdx
+++ b/src/posts/TGF-data-dive.mdx
@@ -80,11 +80,11 @@ For a future experiemnt i'd be keen to compare this picture to that at other eve
 
 ## Conclusions and future experiments
 
-I found looking through our event data an interesting little weekend diverson. It certainly got me learning a few new tricks (which is mostly why I tinker like this). I'm present at most of our events and that experience is way better than trawling through the numbers but equally I'm usually focussed on a specific task whilst there. This made me step back and look at things from a different perspective. Some of these stats like the times of fastest finishers aren't things I would normally pay much attention to on the day but it was fascinating to look at these along with stats like the spread of times for individual athletes over multiple events. Getting a better understanding of the split between first-timers and repeat visitors certainly challenged my assumptions around our attendance.
+I found looking through our event data an interesting little weekend diverson. It certainly got me learning a few new tricks (which is mostly why I tinker like this). I'm present at most of our events and **that experience is way better than trawling through the numbers** but equally I'm usually focussed on a specific task whilst I'm there. This made me step back and look at things from a different perspective. Some of these stats like the times of fastest finishers aren't things I would normally pay much attention to. Looking at this data along with things like the spread of times for individual athletes over multiple events was facinating. Getting a better understanding of the split between first-timers and repeat visitors certainly challenged my assumptions around our attendance.
 
-I'm defintely going to continue to try and get some meaningful data around our voluteers. Volunteering is such an important part of the event for me both me as an inidividual but it's also imperative for the success and sustainability of our event . I feel it's important we understand more about how our volunteers add value and if there are any patterns we can learn from. Much of this we already do through other methods (like talking to each other) but I'd still like to play around with the data.
+I'm defintely going to continue to try and get some meaningful data around our voluteers. Volunteering is such an important part of the event for me both me as an inidividual but also for the health and sustainability of our event . I feel it's important we understand more about how our volunteers take part and if there are any patterns we can learn from. Much of this we already do through other methods (like talking to each other) but I'd still like to play around with the data to complete the picture.
 
-I'm also keen experiment looking at event data from event elsewhere - both in terms of understanding how successful events grow over time but also just in terms of similarities and differences. Maybe I could start looking for our parkrun event twin?!!
+I'm also keen experiment looking at event data from event elsewhere - both in terms of understanding how successful events grow over time but also just in terms of similarities and differences. Maybe I could start looking for our parkrun event twin?!! If you found this intersting let me know and I'll keep sharing what I find.
 
 <small>
   **[Icon credits: London Bus by ATOM, Dog by Loka Mariella both found at
