--- a/src/posts/TGF-data-dive.mdx
+++ b/src/posts/TGF-data-dive.mdx
@@ -76,13 +76,13 @@ Parkrun really isn't just about the fast few though. The **average finish time a
 
 <Barchart chartClass="imageRight" />
 
-For a future experiemnt i'd be keen to compare this picture to that at other events to see how typical these stats are across the wider parkrun event community. I'm very interested in that white space to the right of the bars on the chart! There is a real opportunity to be promoting our event to people in the community who might not have the confidence to participate or be put off by the number of people finishing ahead of 35 mins. Like all parkruns we have tailwalkers (not runners) at our event who make sure [nobody ever comes last at parkrun](https://blog.parkrun.com/uk/2020/04/20/walking-the-talk/). We've also become the graduation run setting for a couple of couch to 5km groups that are run locally which is fantastic. Posts like [this one from Conkers parkrun](https://blog.parkrun.com/uk/2020/06/30/everyone-is-equal/) though make me think there might be even more we can do to encourage people to be be part of our communuity, share the fun, get active and increase our impact!
+For a future experiment i'd be keen to compare this picture to that at other events to see how typical these stats are across the wider parkrun event community. I'm very interested in that white space to the right of the bars on the chart! There is a real opportunity to be promoting our event to people in the community who might not have the confidence to participate or be put off by the number of people finishing ahead of 35 mins. Like all parkruns we have tailwalkers (not runners) at our event who make sure [nobody ever comes last at parkrun](https://blog.parkrun.com/uk/2020/04/20/walking-the-talk/). We've also become the graduation run setting for a couple of couch to 5km groups that are run locally which is fantastic. Posts like [this one from Conkers parkrun](https://blog.parkrun.com/uk/2020/06/30/everyone-is-equal/) though make me think there might be even more we can do to encourage people to be be part of our communuity, share the fun, get active and increase our impact!
 
 ## Conclusions and future experiments
 
-I found looking through our event data an interesting little weekend diverson. It certainly got me learning a few new tricks (which is mostly why I tinker like this). I'm present at most of our events and **that experience is way better than trawling through the numbers** but equally I'm usually focussed on a specific task whilst I'm there. This made me step back and look at things from a different perspective. Some of these stats like the times of fastest finishers aren't things I would normally pay much attention to. Looking at this data along with things like the spread of times for individual athletes over multiple events was facinating. Getting a better understanding of the split between first-timers and repeat visitors certainly challenged my assumptions around our attendance.
+I found looking through our event data an interesting little weekend diverson. It certainly got me learning a few new tricks (which is mostly why I tinker like this). I'm present at most of our events and **that experience is way better than trawling through the numbers** but equally I'm usually focussed on a specific task whilst I'm there. This made me step back and look at things from a different perspective. Some of these stats like the times of fastest finishers aren't things I would normally pay much attention to. Looking at this data along with things like the spread of times for individual athletes over multiple events was fascinating. Getting a better understanding of the split between first-timers and repeat visitors certainly challenged my assumptions around our attendance.
 
-I'm defintely going to continue to try and get some meaningful data around our voluteers. Volunteering is such an important part of the event for me both me as an inidividual but also for the health and sustainability of our event . I feel it's important we understand more about how our volunteers take part and if there are any patterns we can learn from. Much of this we already do through other methods (like talking to each other) but I'd still like to play around with the data to complete the picture.
+I'm defintely going to continue to try and get some meaningful data around our voluteers. Volunteering is such an important part of the event for me as an inidividual but also for the health and sustainability of our event . I feel it's important we understand more about how our volunteers take part and if there are any patterns we can learn from. Much of this we already do through other methods (like talking to each other) but I'd still like to play around with the data to complete the picture.
 
 I'm also keen experiment looking at event data from event elsewhere - both in terms of understanding how successful events grow over time but also just in terms of similarities and differences. Maybe I could start looking for our parkrun event twin?!! If you found this intersting let me know and I'll keep sharing what I find.
 
