--- a/src/posts/TGF-data-dive.mdx
+++ b/src/posts/TGF-data-dive.mdx
@@ -84,7 +84,7 @@ I found looking through our event data an interesting little weekend diverson. I
 
 I'm defintely going to continue to try and get some meaningful data around our voluteers. Volunteering is such an important part of the event for me as an inidividual but also for the health and sustainability of our event . I feel it's important we understand more about how our volunteers take part and if there are any patterns we can learn from. Much of this we already do through other methods (like talking to each other) but I'd still like to play around with the data to complete the picture.
 
-I'm also keen experiment looking at event data from event elsewhere - both in terms of understanding how successful events grow over time but also just in terms of similarities and differences. Maybe I could start looking for our parkrun event twin?!! If you found this intersting let me know and I'll keep sharing what I find.
+I'm also keen to experiment looking at event data from other events - both in terms of understanding how successful events grow over time but also just in terms of similarities and differences. Maybe I could start looking for our parkrun event twin?!! If you found this intersting let me know and I'll keep sharing what I find.
 
 <small>
   **[Icon credits: London Bus by ATOM, Dog by Loka Mariella both found at
