--- a/src/posts/TGF-data-dive.mdx
+++ b/src/posts/TGF-data-dive.mdx
@@ -15,7 +15,7 @@ import Doughnutchart from '../components/charts/doughnutchart'
 
 Anybody who follows [me on twitter](https://twitter.com/_disco) will have possibly noticed that parkrun has become a bit of an obsession for me lately. There are a few reasons for this which I'm sure i'll write about another day. The short story though is that I'm currently loving it and in my spare time I volunteer as part of the core event team for [The Great Field parkrun](https://www.parkrun.org.uk/thegreatfield/) which is conveniently just a few mins walk from my front door in Poundbury, Dorset.
 
-This weekend I decided it'd be an interesting exercise to pull together some of our event data to see what I could learn from the numbers about our little community event. For context I'm no crack data scientist or analyst but thought it'd be an interesting challenge for me to blow the cobwebs off my limited skills and share some of what I found out. Like all my little hobby projects I've tried to document the proces. If the 'how I did this' bit doesn't interest you feel free to [skip down to the insights](#insights). 🌳❤️
+This weekend I decided it'd be an interesting exercise to pull together some of our event data to see what I could learn from the numbers about our little community event. For context I'm no crack data scientist or analyst but thought it'd be an interesting challenge for me to blow the cobwebs off my limited skills and share some of what I found out. Like all my little hobby projects I've tried to document the process. If the 'how I did this' bit doesn't interest you feel free to [skip down to the insights](#insights). 🌳❤️
 
 ## Method
 
