update another typo and image placement

--- a/src/posts/TGF-data-dive.mdx
+++ b/src/posts/TGF-data-dive.mdx
@@ -37,6 +37,10 @@ Over our 20 events we've had people run, jog or walk our 5km course **5355 times
 
 Those 5355 finishers actually equate to approximately **1852 individual athletes** crossing the line at our event on the Great Field. I say 'approximately' as within the result set we have 288 unknowns. This is likely made up of people who've forgotten to bring a barcode, maybe never registered or could be the result of an error caused during timekeeping, token sorting etc. Another known group missing from these numbers is those lucky small people safely wrapped up in running buggies being pushed around our course by adults far fitter than me (the TGF parkrun next generation maybe?! 🖖).
 
+### Participation
+
+To put this number of participants in perspecitve - 1852 people would fill just over **14 London buses** to capacity (with 80 people seated and 50 people standing on each bus). This analysis also doesn't include our 4-legged friends 🐩 or TGF Next Generation™ so I suggest we round up to at least 15 buses if we decide to take everybody out for a picnic!
+
 <GatsbyImage
   alt="14 buses plus one for the doggies"
   title="14 buses plus one for the doggies"
@@ -44,13 +48,9 @@ Those 5355 finishers actually equate to approximately **1852 individual athletes
   className="imageRight"
 />
 
-### Participation
-
-To put this number of participants in perspecitve - 1852 people would fill just over **14 London buses** to capacity (with 80 people seated and 50 people standing on each bus). This analysis also doesn't include our 4-legged friends 🐩 or TGF Next Generation™ so I suggest we round up to at least 15 buses if we decide to take everybody out for a picnic!
-
 A stat that suprised me a little was that out of those 1852 folks, **1021 (55.13%)** have taken part at our event only once. Giving it more thought I've concluded that being a new event has meant we've had lots of support & interest and attendees from other established local parkruns plus quite a few tourists from further afield. This trend itself is a positive one that I'm sure will only continue with [rave reviews like this one](https://www.youtube.com/watch?v=OKiYqjq4oew&t=462s). Those 288 unknowns in themselves could balance this number out a bit more also.
 
-Getting the word out to people who've never heard of parkrun or haven't heard we now have an event in Dorchester will likley take a little more time, patience and work from the events team and parkrun community. It's a metric I'm keenly interested in tracking closely - I really hope our little parkrun provides an opportunity to build and strengthen our local community whilst also promoting improved physical and mental health outcomes. The more regular attendees we have the bigger the potential impact (because people don't often return to events they don't get value from). This is another reason why I'm keen to tinker some more with the stats and find easier ways to guage how many athletes list us as their 'home' event.
+Getting the word out to people who've never heard of parkrun or haven't heard we now have an event in Dorchester will likely take a little more time, patience and work from the events team and parkrun community. It's a metric I'm keenly interested in tracking closely - I really hope our little parkrun provides an opportunity to build and strengthen our local community whilst also promoting improved physical and mental health outcomes. The more regular attendees we have the bigger the potential impact (because people don't often return to events they don't get value from). This is another reason why I'm keen to tinker some more with the stats and find easier ways to guage how many athletes list us as their 'home' event.
 
 I won't share names in this post but I can tell you we've had **4 individuals who've crossed the line at all 20 events** at the Great Field. According to their parkrun profiles two of those four were brand new to parkrun at our first event and have so far (in terms of parkrun attendance) only ever run with us, which is a most impressive streak indeed! ♥️
 
