--- a/src/posts_draft/map-test.mdx
+++ b/src/posts_draft/map-test.mdx
@@ -9,9 +9,9 @@ postImages:
 ---
 
 import { getImage, GatsbyImage } from 'gatsby-plugin-image'
-import Choropleth from '../components/maps/choropleth'
+import Choropleth from '../components/fireinc-map/choropleth'
 
-<Choropleth mapClass="imageLeft" />
+<Choropleth mapClass="imageFull" />
 
 Anyone who follows [me on twitter](https://twitter.com/_disco) will have possibly noticed that parkrun has become a bit of an obsession for me lately. There are a few reasons for this which I'm sure I'll write about another day. The short story though is that I'm currently loving it and in my spare time I volunteer as part of the core event team for [The Great Field parkrun](https://www.parkrun.org.uk/thegreatfield/) which is conveniently just a few minutes walk from my front door in Poundbury, Dorset.
 
