--- a/src/posts/bye-bye-flickr.mdx
+++ b/src/posts/bye-bye-flickr.mdx
@@ -47,7 +47,7 @@ Over the following years I bought and collected all sorts of cameras, lenses, li
 
 These days its rare for me to reach for my SLR or put film in one of my 35mm cameras but I still take several photos a day on my smartphone and most weeks I'll also now grab some goPro footage. The only place I really curate and share photos now is [on Instagram](https://www.instagram.com/_d1sco/). I used to love Instagram but it's journey to be a weird combination of facebook & TikTok seem to be picking up pace and that's not appealing to me.
 
-I may have to carve out some space on this site to curate some images I'm fond of or to document projects. I think I might be finally beyond the gratification that comes with notifications of likes & comments and mostly I just fancy a simple place to point people at the things I've made. Whilst I mull this overadded some samples pulled from the my old flickr collection below...
+I may have to carve out some space on this site to curate some images I'm fond of or to document projects. I think I might be finally beyond the gratification that comes with notifications of likes & comments and mostly I just fancy a simple place to point people at the things I've made. Whilst I mull all of this over I've added some images pulled from the my old flickr archive below for your suprose and delight dear reader.
 
 <GatsbyImage
   alt="Doodle Guitar"
