--- a/src/posts/localgovcamp-2017.mdx
+++ b/src/posts/localgovcamp-2017.mdx
@@ -1,7 +1,7 @@
 ---
 title: LocalGovCamp 2017
 date: 2017-09-26
-description: 'My thoughts after taing a trip to LocalGovCamp in Bristol'
+description: 'My thoughts after taking a trip to LocalGovCamp in Bristol'
 tags: ['work', 'localgovcamp']
 socialImage: '../images/social-image.jpg'
 postImages:
