upgrading to gatsby 5x and fixinf upgrade issues

--- a/src/posts/TGF-data-dive.mdx
+++ b/src/posts/TGF-data-dive.mdx
@@ -44,7 +44,7 @@ To put this number of participants in perspective - 1852 people would fill just 
 <GatsbyImage
   alt="14 buses plus one for the doggies"
   title="14 buses plus one for the doggies"
-  image={getImage(props.frontmatter.postImages[0])}
+  image={getImage(props.data.mdx.frontmatter.postImages[0])}
   className="imageRight"
 />
 
