--- a/src/posts/bye-bye-flickr.mdx
+++ b/src/posts/bye-bye-flickr.mdx
@@ -30,7 +30,7 @@ I think I joined flickr in about 2006. Robyn was born in 2002, digital photograp
 <GatsbyImage
   alt="first bike ride"
   title="first bike ride"
-  image={getImage(props.frontmatter.postImages[0])}
+  image={getImage(props.data.mdx.frontmatter.postImages[0])}
   className="imageFull"
 />
 
@@ -41,7 +41,7 @@ Over the following years I bought and collected all sorts of cameras, lenses, li
 <GatsbyImage
   alt="tshirt suntan"
   title="tshirt suntan"
-  image={getImage(props.frontmatter.postImages[1])}
+  image={getImage(props.data.mdx.frontmatter.postImages[1])}
   className="imageFull"
 />
 
@@ -52,83 +52,83 @@ I may have to carve out some space on this site to curate some images I'm fond o
 <GatsbyImage
   alt="Doodle Guitar"
   title="Doodle Guitar"
-  image={getImage(props.frontmatter.postImages[2])}
+  image={getImage(props.data.mdx.frontmatter.postImages[2])}
   className="imageFull"
 />
 
 <GatsbyImage
   alt="Experiments in double exposures"
   title="Experiments in double exposures"
-  image={getImage(props.frontmatter.postImages[3])}
+  image={getImage(props.data.mdx.frontmatter.postImages[3])}
   className="imageFull"
 />
 
 <GatsbyImage
   alt="trapped inside"
   title="trapped inside"
-  image={getImage(props.frontmatter.postImages[4])}
+  image={getImage(props.data.mdx.frontmatter.postImages[4])}
   className="imageFull"
 />
 
 <GatsbyImage
   alt="one man and his gull"
   title="one man and his gull"
-  image={getImage(props.frontmatter.postImages[5])}
+  image={getImage(props.data.mdx.frontmatter.postImages[5])}
   className="imageFull"
 />
 
 <GatsbyImage
   alt="standing on the bench"
   title="standing on the bench"
-  image={getImage(props.frontmatter.postImages[6])}
+  image={getImage(props.data.mdx.frontmatter.postImages[6])}
   className="imageFull"
 />
 
 <GatsbyImage
   alt="3 wise monkeys"
   title="3 wise monkeys"
-  image={getImage(props.frontmatter.postImages[7])}
+  image={getImage(props.data.mdx.frontmatter.postImages[7])}
   className="imageFull"
 />
 
 <GatsbyImage
   alt="more beach friends"
   title="more beach friends"
-  image={getImage(props.frontmatter.postImages[8])}
+  image={getImage(props.data.mdx.frontmatter.postImages[8])}
   className="imageFull"
 />
 
 <GatsbyImage
   alt="badly drawn boy"
   title="badly drawn boy"
-  image={getImage(props.frontmatter.postImages[9])}
+  image={getImage(props.data.mdx.frontmatter.postImages[9])}
   className="imageFull"
 />
 
 <GatsbyImage
   alt="storm troopers about to get attacked by giant hamster"
   title="storm troopers about to get attacked by giant hamster"
-  image={getImage(props.frontmatter.postImages[10])}
+  image={getImage(props.data.mdx.frontmatter.postImages[10])}
   className="imageFull"
 />
 
 <GatsbyImage
   alt="robyn modelling"
   title="robyn modelling"
-  image={getImage(props.frontmatter.postImages[11])}
+  image={getImage(props.data.mdx.frontmatter.postImages[11])}
   className="imageFull"
 />
 
 <GatsbyImage
   alt="durdle dor"
   title="durdle dor"
-  image={getImage(props.frontmatter.postImages[12])}
+  image={getImage(props.data.mdx.frontmatter.postImages[12])}
   className="imageFull"
 />
 
 <GatsbyImage
   alt="Olympus Trip 35"
   title="Olympus Trip 35"
-  image={getImage(props.frontmatter.postImages[13])}
+  image={getImage(props.data.mdx.frontmatter.postImages[13])}
   className="imageFull"
 />
