--- a/src/posts/homesick.mdx
+++ b/src/posts/homesick.mdx
@@ -22,6 +22,6 @@ x o x
 <GatsbyImage
   alt="One man and his island!"
   title="One man and his island!"
-  image={getImage(props.frontmatter.postImages[0])}
+  image={getImage(props.data.mdx.frontmatter.postImages[0])}
   className="imageFull"
 />
