--- a/src/posts/lets-keep-talking-about-this.mdx
+++ b/src/posts/lets-keep-talking-about-this.mdx
@@ -21,6 +21,6 @@ Normal cheery Instagram activity of me battling public transport resumes tomorro
 <GatsbyImage
   alt="for Morgan and bethany"
   title="for Morgan and Bethany"
-  image={getImage(props.frontmatter.postImages[0])}
+  image={getImage(props.data.mdx.frontmatter.postImages[0])}
   className="imageFull"
 />
