--- a/src/posts/localgovcamp-2017.mdx
+++ b/src/posts/localgovcamp-2017.mdx
@@ -19,7 +19,7 @@ Having worked in local government before joining FutureGov, I’d heard of the e
 <GatsbyImage
   alt="LocalGovCamp promo pic"
   title="LocalGovCamp promo pic"
-  image={getImage(props.frontmatter.postImages[0])}
+  image={getImage(props.data.mdx.frontmatter.postImages[0])}
   className="imageFull"
 />
 
