--- a/src/posts/tinkering-monday.mdx
+++ b/src/posts/tinkering-monday.mdx
@@ -15,7 +15,7 @@ Publishing my first set of [weeknotes on Friday](http://words.lostinthe.uk/weekn
 <GatsbyImage
   alt="toy robot"
   title="toy robot"
-  image={getImage(props.frontmatter.postImages[0])}
+  image={getImage(props.data.mdx.frontmatter.postImages[0])}
   className="imageFull"
 />
 
