--- a/src/posts/wk2-how-high.mdx
+++ b/src/posts/wk2-how-high.mdx
@@ -20,7 +20,7 @@ I've been reflecting on the factors that got me both beyond my comfort zone and 
 <GatsbyImage
   alt="team mackenzie on the high ropes"
   title="on the ropes"
-  image={getImage(props.frontmatter.postImages[0])}
+  image={getImage(props.data.mdx.frontmatter.postImages[0])}
   className="imageFull"
 />
 
