--- a/src/posts/wk6-range.mdx
+++ b/src/posts/wk6-range.mdx
@@ -24,7 +24,7 @@ In addition to doing a great job of re-stocking my sticker collection this week 
 <GatsbyImage
   alt="only in hackney"
   title="only in hackney"
-  image={getImage(props.frontmatter.postImages[0])}
+  image={getImage(props.data.mdx.frontmatter.postImages[0])}
   className="imageFull"
 />
 
