--- a/src/posts/6-month-reflection.mdx
+++ b/src/posts/6-month-reflection.mdx
@@ -19,7 +19,7 @@ have some actions coming out of such a review so smiles all round!
 
 <GatsbyImage
   alt="A big mountain!"
-  image={getImage(props.frontmatter.postImages[0])}
+  image={getImage(props.data.mdx.frontmatter.postImages[0])}
   className="imageFull"
 />
 
